# sws

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  DragDrop.cpp  DragDrop.h  Makefile  Menus.cpp  Menus.h  ProjectList.cpp  ProjectList.h  ProjectMgr.cpp  ProjectMgr.h  Prompt.cpp  Prompt.h  RCa03296  README.md  README.txt  ReaScript.cpp  ReaScript.h  SWS_Extension.sln  SWS_Template.ReaperLangPack  Zoom.cpp  Zoom.h  index.xml  license.h  license.txt  mac_resgen.php  maclicense.txt  reaper.cpp  reascript_helper.pl  reascript_lua_eel.h  reascript_lua_eel.php  reascript_python.pl  reascript_test.c  reascript_test.eel  reascript_test.lua  (+45 more)
Amagalma/: amagalma.cpp  amagalma.hpp
Autorender/: Autorender.cpp  Autorender.h  CMakeLists.txt  RenderRegion.cpp  RenderRegion.h  RenderTrack.cpp  RenderTrack.h
Breeder/: BR.cpp  BR.h  BR_ContextualToolbars.cpp  BR_ContextualToolbars.h  BR_ContinuousActions.cpp  BR_ContinuousActions.h  BR_EnvTools.cpp  BR_EnvTools.h  BR_Envelope.cpp  BR_Envelope.h  BR_EnvelopeUtil.cpp  BR_EnvelopeUtil.h  BR_Loudness.cpp  BR_Loudness.h  BR_MidiEditor.cpp  BR_MidiEditor.h  BR_MidiTools.cpp  BR_MidiTools.h  BR_MidiUtil.cpp  BR_MidiUtil.h  BR_Misc.cpp  BR_Misc.h  BR_MouseUtil.cpp  BR_MouseUtil.h  BR_ProjState.cpp  BR_ProjState.h  BR_ReaScript.cpp  BR_ReaScript.h  BR_Tempo.cpp  BR_Tempo.h  BR_TempoDlg.cpp  BR_TempoDlg.h  BR_TempoTools.cpp  BR_TempoTools.h  BR_Timer.cpp  BR_Timer.h  BR_Update.cpp  BR_Update.h  BR_Util.cpp  BR_Util.h  (+1 more)
BuildUtils/: BuildLangpack.cpp  BuildLangpack.vcxproj  BuildUtils.sln  BuildUtils_vs12.sln  CMakeLists.txt  IncVersion.cpp  IncVersion.vcproj  IncVersion.vcxproj  MakeWhatsNew.cpp  MakeWhatsNew.vcproj  MakeWhatsNew.vcxproj  PrintVersion.cpp  PrintVersion.vcproj  PrintVersion.vcxproj  build_template_langpack.sh
Color/: Autocolor.cpp  Autocolor.h  CMakeLists.txt  Color.cpp  Color.h
Console/: CMakeLists.txt  Console.cpp  Console.h
Fingers/: BaseDialog.cxx  BaseDialog.hxx  CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Envelope.cpp  Envelope.h  EnvelopeCommands.cpp  EnvelopeCommands.h  FNG.cpp  FNG.cxx  FNG_STL_algorithm.hxx  FNG_Settings.h  FNG_client.h  FileUtil.cxx  FileUtil.hxx  GrooveCommands.cpp  GrooveCommands.cxx  GrooveCommands.h  GrooveCommands.hxx  GrooveDialog.cpp  GrooveDialog.cxx  GrooveDialog.h  GrooveDialog.hxx  GrooveQuantize.cxx  GrooveQuantize.hxx  GrooveTemplates.cpp  GrooveTemplates.cxx  GrooveTemplates.h  GrooveTemplates.hxx  MediaItemCommands.cpp  MediaItemCommands.h  MidiLaneCommands.cpp  MidiLaneCommands.cxx  MidiLaneCommands.h  MiscCommand.cxx  MiscCommands.cpp  MiscCommands.h  MiscCommands.hxx  RprContainer.h  (+49 more)
FingersExtras/: fng_extension.nsh  fng_extension.nsi  fng_extension_x64.nsi
Freeze/: ActiveTake.cpp  ActiveTake.h  CMakeLists.txt  Freeze.cpp  Freeze.h  ItemSelState.cpp  ItemSelState.h  MacroDebug.cpp  MuteState.cpp  MuteState.h  TimeState.cpp  TimeState.h  TrackItemState.cpp  TrackItemState.h
GenLangPack/: build_sample_langpack.vcproj  build_sample_langpack.vcxproj  stdafx.cpp  sws_build_sample_langpack.cpp  sws_build_template_langpack.sh  sws_version.cpp  sws_version.h
IX/: CMakeLists.txt  IX.cpp  IX.h  Label.cpp  Label.h  PlaylistImport.cpp
Install/: build.bat  license.txt  maclicense.txt  osx_build.command  pkg-dmg  sws_extension.nsh  sws_extension.nsi  sws_extension_x64.nsi  sws_osx_install.command  sws_osx_install.dsstore  sws_osx_install.py  sws_osx_install.tiff
Julian/: js_swell_ReaScript.cpp  js_swell_ReaScript.h
MarkerActions/: CMakeLists.txt  MarkerActions.cpp  MarkerActions.h
MarkerList/: CMakeLists.txt  MarkerList.cpp  MarkerList.h  MarkerListActions.cpp  MarkerListActions.h  MarkerListClass.cpp  MarkerListClass.h
MediaPool/: DragDrop.cpp  MediaPool.cpp  MediaPool.h
Misc/: Adam.cpp  Adam.h  Analysis.cpp  Analysis.h  Breeder.cpp  Breeder.h  CMakeLists.txt  Context.cpp  Context.h  EditCursor.cpp  EditCursor.h  FolderActions.cpp  FolderActions.h  ItemParams.cpp  ItemParams.h  ItemSel.cpp  ItemSel.h  Macros.cpp  Macros.h  Misc.cpp  Misc.h  ProjPrefs.cpp  ProjPrefs.h  RecCheck.cpp  RecCheck.h  TrackParams.cpp  TrackParams.h  TrackSel.cpp  TrackSel.h
ObjectState/: CMakeLists.txt  ObjectState.cpp  ObjectState.h  TrackEnvelope.cpp  TrackEnvelope.h  TrackFX.cpp  TrackFX.h  TrackSends.cpp  TrackSends.h
OscPkt/: oscpkt.h  readme.txt  udp.h
Padre/: CMakeLists.txt  padreActions.cpp  padreActions.h  padreEnvelopeProcessor.cpp  padreEnvelopeProcessor.h  padreMidi.h  padreMidiItemFilters.cpp  padreMidiItemFilters.h  padreMidiItemGenerators.cpp  padreMidiItemGenerators.h  padreMidiItemProcBase.cpp  padreMidiItemProcBase.h  padreRmeTotalmix.cpp  padreRmeTotalmix.h  padreUtils.cpp  padreUtils.h
Projects/: CMakeLists.txt  ProjectList.cpp  ProjectList.h  ProjectMgr.cpp  ProjectMgr.h
ProjectsSetList/: CMakeLists.txt  ProjectSetList.cpp  ProjectSetList.h  ProjectSetListMgr.cpp  ProjectSetListMgr.h
SnM/: CMakeLists.txt  SNM_Chunk.cpp  SNM_Chunk.h  SNM_ChunkParserPatcher.h  SnM.cpp  SnM.h  SnM_Actions.cpp  SnM_Actions.h  SnM_CSurf.cpp  SnM_CSurf.h  SnM_Chunk.cpp  SnM_Chunk.h  SnM_ChunkParserPatcher.h  SnM_CueBuss.cpp  SnM_CueBuss.h  SnM_Cyclactions.cpp  SnM_Cyclactions.h  SnM_Dlg.cpp  SnM_Dlg.h  SnM_DynActions.cpp  SnM_DynActions.h  SnM_FX.cpp  SnM_FX.h  SnM_FXChain.cpp  SnM_FXChain.h  SnM_FXChainView.cpp  SnM_FXChainView.h  SnM_Find.cpp  SnM_Find.h  SnM_FindView.cpp  SnM_FindView.h  SnM_Item.cpp  SnM_Item.h  SnM_LiveConfigs.cpp  SnM_LiveConfigs.h  SnM_ME.cpp  SnM_ME.h  SnM_Marker.cpp  SnM_Marker.h  SnM_MidiLiveView.cpp  (+31 more)
Snapshots/: CMakeLists.txt  SnapshotClass.cpp  SnapshotClass.h  SnapshotMerge.cpp  SnapshotMerge.h  Snapshots.cpp  Snapshots.h
TRM/: CMakeLists.txt  trm.cpp  trm.h
TrackList/: CMakeLists.txt  Tracklist.cpp  Tracklist.h  TracklistFilter.cpp  TracklistFilter.h
Utility/: Base64.cpp  Base64.h  CMakeLists.txt  RazorEditArea.cpp  RazorEditArea.hpp  ReaScript_Utility.cpp  ReaScript_Utility.hpp  SectionLock.cpp  SectionLock.h  configvar.cpp  configvar.h  envelope.cpp  envelope.hpp  hidpi.cpp  hidpi.h  win32-import.h  (+2 more)
(+264 files in other folders)
